--- a/jsgenius.html
+++ b/jsgenius.html
@@ -3,14 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Js Genius</title>
+	<style>
+		.painel {width:320px; height:320px; margin:0 auto; position:relative; background:#222; padding:20px}
+		.color {width:150px; height:150px; position:absolute}
+
+		.green {top:20px; left:20px; background:green}
+		.red {top:20px; right:20px; background:red}
+		.yellow {bottom:20px; left:20px; background:yellow}
+		.blue {bottom:20px; right:20px; background:blue}
+	</style>
 </head>
 <body>
 	<h1>Js Genius</h1>
 	<div class="painel">
-		<div class="red"></div>
-		<div class="blue"></div>
-		<div class="green"></div>
-		<div class="yellow"></div>
+		<div class="color green"></div>
+		<div class="color red"></div>
+		<div class="color yellow"></div>
+		<div class="color blue"></div>
 	</div>
 </body>
 </html>
