DS_Store ignore

--- a/jsgenius.html
+++ b/jsgenius.html
@@ -15,11 +15,15 @@
 </head>
 <body>
 	<h1>Js Genius</h1>
+	<h2><a href="#" id="js_start">start</a></h2>
+	
 	<div class="painel">
-		<div class="color green"></div>
-		<div class="color red"></div>
-		<div class="color yellow"></div>
-		<div class="color blue"></div>
+		<div class="color green" id="js_green"></div>
+		<div class="color red" id="js_red" ></div>
+		<div class="color yellow" id="js_yellow"></div>
+		<div class="color blue" id="js_blue"></div>
 	</div>
+	
+	<script src="static/js/js.js" type="text/javascript"></script>
 </body>
 </html>
