--- a/jsgenius.html
+++ b/jsgenius.html
@@ -10,7 +10,7 @@
 	<div class="painel">
 		<div class="color green"></div>
 		<div class="color red"></div>
-		<div class="on color yellow"></div>
+		<div class="color yellow"></div>
 		<div class="color blue"></div>
 	</div>
 </body>
